{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 15,
  "lineage": "bb082bc3-3685-374b-6f52-7ee83dde0aca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natlb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-06d909e660c260d21",
            "public_dns": "ec2-3-7-67-181.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.67.181",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MySQL",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08706cb5f68222d09",
            "arn": "arn:aws:ec2:ap-south-1:349018947514:instance/i-0d001f6319b08ceb0",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d001f6319b08ceb0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey12",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fca198437e4ed3c9",
            "private_dns": "ip-192-168-1-145.ap-south-1.compute.internal",
            "private_ip": "192.168.1.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0648b94dc0fd79132",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c022078b0cdb72f",
            "tags": {
              "Name": "mysql"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01f82f2ef2604248b"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_mysql",
            "aws_subnet.subnet2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000cbce3e1b899ebd",
            "arn": "arn:aws:ec2:ap-south-1:349018947514:instance/i-0f600f702ef22fdc4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f600f702ef22fdc4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey12",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04f9a9256657662b6",
            "private_dns": "ip-192-168-0-136.ap-south-1.compute.internal",
            "private_ip": "192.168.0.136",
            "public_dns": "ec2-13-232-121-227.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.121.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-079d141586fdf8d2b",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2f48b576b0d36fc",
            "tags": {
              "Name": "wordpress"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-066f8586953b06c97"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349018947514:internet-gateway/igw-00e8f640766dc3bef",
            "id": "igw-00e8f640766dc3bef",
            "owner_id": "349018947514",
            "tags": {
              "Name": "tera-gw"
            },
            "vpc_id": "vpc-08719bf68bd0fbeb2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d909e660c260d21",
            "id": "nat-0ff4fd214a0251c7c",
            "network_interface_id": "eni-0f5ac507c44abf86a",
            "private_ip": "192.168.0.16",
            "public_ip": "3.7.67.181",
            "subnet_id": "subnet-0f2f48b576b0d36fc",
            "tags": {
              "Name": "NAT_gw"
            }
          },
          "dependencies": [
            "aws_eip.natlb",
            "aws_subnet.subnet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0355248271a03708d",
            "owner_id": "349018947514",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00e8f640766dc3bef",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "at_routetable1"
            },
            "vpc_id": "vpc-08719bf68bd0fbeb2"
          },
          "dependencies": [
            "aws_internet_gateway.gw1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e2274cdd3d8a8a32",
            "owner_id": "349018947514",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0ff4fd214a0251c7c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "at_routetable2"
            },
            "vpc_id": "vpc-08719bf68bd0fbeb2"
          },
          "dependencies": [
            "aws_eip.natlb",
            "aws_nat_gateway.gw2",
            "aws_subnet.subnet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0016fa244449e886b",
            "route_table_id": "rtb-0355248271a03708d",
            "subnet_id": "subnet-0f2f48b576b0d36fc"
          },
          "dependencies": [
            "aws_internet_gateway.gw1",
            "aws_route_table.rt1",
            "aws_subnet.subnet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5e9750dd36551b6",
            "route_table_id": "rtb-0e2274cdd3d8a8a32",
            "subnet_id": "subnet-01c022078b0cdb72f"
          },
          "dependencies": [
            "aws_eip.natlb",
            "aws_nat_gateway.gw2",
            "aws_route_table.rt2",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349018947514:security-group/sg-01f82f2ef2604248b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f82f2ef2604248b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MYSQL-rule",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_mysql",
            "name_prefix": null,
            "owner_id": "349018947514",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08719bf68bd0fbeb2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349018947514:security-group/sg-066f8586953b06c97",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066f8586953b06c97",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "349018947514",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08719bf68bd0fbeb2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349018947514:subnet/subnet-0f2f48b576b0d36fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0f2f48b576b0d36fc",
            "map_public_ip_on_launch": true,
            "owner_id": "349018947514",
            "tags": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-08719bf68bd0fbeb2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349018947514:subnet/subnet-01c022078b0cdb72f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-01c022078b0cdb72f",
            "map_public_ip_on_launch": false,
            "owner_id": "349018947514",
            "tags": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-08719bf68bd0fbeb2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349018947514:vpc/vpc-08719bf68bd0fbeb2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0adb01a010dd7b574",
            "default_route_table_id": "rtb-02464e2dd97828a7d",
            "default_security_group_id": "sg-02e21d3fa232fb406",
            "dhcp_options_id": "dopt-35bc475e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08719bf68bd0fbeb2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02464e2dd97828a7d",
            "owner_id": "349018947514",
            "tags": {
              "Name": "tera-vpc"
            }
          }
        }
      ]
    }
  ]
}